hphp/hack/test/typecheck/dynamic_class.php.exp
File "dynamic_class.php", line 10, characters 3-4:
Was expecting a class, but got a string (Typing[4026])
